[tool.poetry]
name = "cson-to-markdown"
version = "0.1.0"
description = "Extracts the markdown section from .cson files."
authors = ["Bram Vereertbrugghen <bramvereertbrugghen@live.be>"]
license = "MIT"
homepage = "https://github.com/BramVer/cson-to-markdown"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
smart-getenv = "^1.1"
fire = "^0.2.1"
pyyaml = "^5.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
better-exceptions = "^0.2.2"
pdbpp = "^0.10.2"
autohooks = "^1.1"
autohooks-plugin-isort = "^1.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
autohooks-plugin-black = {version = "^1.1", allows-prereleases = true}
bpython = "^0.18.0"

[tool.poetry.scripts]
cson_to_markdown = 'cson_to_markdown:main'

[tool.autohooks]
mode = "poetry"
pre-commit = [
    "autohooks.plugins.isort",
    "autohooks.plugins.black",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 80

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
